# Quobi

./: .gitignore  BUILD.md  CLA.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSING.md  README.md  SECURITY.md  build-appimage.sh
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
brand/: CREDITS.md  README.md  _build_lockup.py
docs/: BUILD-FROM-SOURCE.md  PARAKEET.md  org-profile-README.md
shared/: README.md  cleanup-base.txt  hallucinations.json  scratch-phrases.json  style-formatted.txt  style-tidy.txt  style-verbatim.txt
voice-type/: .gitignore  Makefile  README.md  WINDOWS.md  _entry.py  install.sh  requirements-build.txt  requirements.txt  run.sh  voice-type.spec
voice-type-desktop/: README.md  index.html  package.json  vite.config.ts
voice-type-desktop/src/: App.tsx  index.css
voice-type-desktop/src-tauri/: Cargo.toml  tauri.conf.json  tauri.linux.conf.json  tauri.windows.conf.json
voice-type-desktop/src-tauri/icons/: icon.icns
voice-type-desktop/src-tauri/scripts/: brand-windows-binaries.ps1  build-whisper-linux.sh  build-whisper-windows.ps1  build-windows-remote.sh  build-windows.ps1
voice-type-desktop/src-tauri/src/: daemonctl.rs  history.rs  lib.rs  main.rs  paths.rs  retry.rs  settings.rs  status.rs
voice-type/packaging/: quobi-daemon.desktop.in  uinput.rules  version_win.txt  ydotoold.service
voice-type/tests/: cleanup_regression.py
voice-type/training/: TIER_TRAINING_NOTES.md  TRAINING_V3_NOTES.md  V4_DATA_PLAN.md  V4_TRAINING_NOTES.md  assemble_seed.py  bench.py  eval.py  (+41 more)
(+37 files in other folders)
