[package]
name = "voice-type-desktop"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "voice_type_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Privileged work lives here in memory-safe Rust: file access, config,
# the Groq network calls for retry. rustls (not native-tls) so the binary
# has no OpenSSL system dependency — cleaner cross-platform shipping.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "blocking", "multipart", "json"] }
dirs = "5"
toml = "0.8"
toml_edit = "0.22"

